drkns 27.11.2016 11:48:40 +0200 - build 4859

1. При смене диска мышью не всегда устанавливался текущий каталог панели.

drkns 26.11.2016 14:11:57 +0200 - build 4858

1. Частичный откат 4853 ради совместимости с W2k.

drkns 26.11.2016 03:41:05 +0200 - build 4857

1. В gcc wcschr и ему подобные снимали константность с возвращаемого указателя.
   Багу 10 лет и чинить его, похоже, не собираются.

zg 25.11.2016 23:42:39 +0200 - build 4856

1. Уточнение 4853.2.

drkns 25.11.2016 17:46:52 +0200 - build 4855

1. Уточнение 4853.2.

drkns 25.11.2016 17:34:15 +0200 - build 4854

1. gcc 5.

drkns 25.11.2016 15:41:04 +0200 - build 4853

1. 0003355: Far виснет после запроса привилегий при поиске в архивах.

2. Продолжение 4849.

drkns 23.11.2016 23:32:50 +0200 - build 4852

1. С форума: падало при постоянных блоках и выделенном блоке от почти начала строки до ее конца и нажатии Enter в начале строки

w17 23.11.2016 08:18:32 +0300 - build 4851

1. Fix 2643 -- пропадание текста в просмотре.

drkns 23.11.2016 02:44:51 +0200 - build 4850

1. Некорректно отображался hex-просмотр.

drkns 22.11.2016 03:33:12 +0200 - build 4849

1. Продолжим начатое в 4848:
   - обновляем по таймауту, как везде
   - из поиска частично удалены остатки былой роскоши (но не все)
   - мелкие правки в смежных модулях.

zg 21.11.2016 20:27:54 +0200 - build 4848

1. диалог с результатами поиска теперь обновляется из главного потока. вся синхронизация в диалогах и меню убрана.

drkns 21.11.2016 10:20:02 +0200 - build 4847

1. Ещё одно уточнение 4834.

2. Рефакторинг.

w17 20.11.2016 15:40:36 +0300 - build 4846

1. Fix 2201.

drkns 19.11.2016 14:44:48 +0200 - build 4845

1. После 4834 криво работало меню ассоциаций.

2. Пара мелочей.

drkns 18.11.2016 20:16:18 +0200 - build 4844

1. Ещё пара уточнений 4834.

drkns 18.11.2016 17:53:42 +0200 - build 4843

1. Уточнение выравнивания строк по правому краю в элементах интерфейса.

2. Coverity warnings.

3. Рефакторинг.

zg 17.11.2016 11:48:08 +0200 - build 4842
